# pelican_pandoc_reader

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.rst  setup.cfg  tox.ini
pelican_pandoc_reader/: __init__.py
src/pelican_pandoc_reader/: __init__.py
tests/: test_reader.py
