[metadata]
name=pelican_pandoc_reader
version=0.1
description=Basic plugin to use Pandoc for generating internal html for Pelican
author=Jonathan Robey
author-email=class4kayaker@gmail.com
license='MIT'
long_description=file: README.rst
classifiers=
    Development Status :: 4 - Beta,
    Framework :: Pelican :: Plugins,
    Bad Classifier

[options]
zip_safe=True
include_package_data=True
packages=find:
install_requires=
    pelican
    pypandoc

[options.packages.find]
exclude=
    tests

[bdist_wheel]
