[metadata]
name=pelican-pandoc-reader
version=0.3.1
description=Basic plugin to use Pandoc for generating internal html for Pelican
author=Jonathan Robey
author-email=class4kayaker@gmail.com
license='MIT'
long_description=file: README.rst
url='https://github.com/class4kayaker/pelican_pandoc_reader'
classifiers=
    Development Status :: 4 - Beta,
    Operating System :: OS Independent,
    Framework :: Pelican :: Plugins,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 2,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: Implementation :: CPython,
    Topic :: Internet :: WWW/HTTP,
    No Upload

[options]
zip_safe=True
include_package_data=True
package_dir=
    =src
packages=find:
install_requires=
    pelican>=4.0.0
    pypandoc>=1.4

[options.packages.find]
where=src
exclude=
    tests

[bdist_wheel]
